# Muse

./: .gitignore  Cargo.toml  README.md
scripts/: img2bin.py
src/: editor_camera.rs  editor_console.rs  editor_console_cursor.rs  editor_cursor.rs  editor_directives.rs  editor_file.rs  editor_keywords.rs  editor_pallete.rs  editor_text.rs  main.rs
src/console/: editor_console.rs  editor_console_cursor.rs  editor_directives.rs  editor_file_system.rs  editor_terminal.rs  mod.rs
src/options/: editor_pallete.rs
src/text/: editor_clipboard.rs  editor_cursor.rs  editor_input.rs  editor_language_manager.rs  editor_text.rs  editor_text_stylizer.rs  mod.rs
src/win/: editor_win_config.rs  mod.rs
