[package]
name = "Muse"
version = "1.5.3"
edition = "2024"

[dependencies]
macroquad = { git = "https://github.com/GpapPeaky/Muse-macroquad", branch = "muse_kill_vsync", features = ["audio"] }
miniquad = "0.4.8"
once_cell = "1.21.3"
regex = "1.12.2"
rfd = "0.16.0"
which = "8.0.0"
copypasta = "0.10.2"
